Change for OW-263 and OW-264

--- a/src/components/assets-deployed/sub-components/FlightItem.css
+++ b/src/components/assets-deployed/sub-components/FlightItem.css
@@ -1,5 +1,4 @@
-.component {
-    height: 501px;
+.flightItemComponent {
     background-color: #FFFFFF;
     box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
     border: 1px solid #EEEEEE;
