--- a/src/components/upload-portfolio/UploadWidget.css
+++ b/src/components/upload-portfolio/UploadWidget.css
@@ -36,7 +36,6 @@ div.componentStyle {
     background-color: #FAFAFA ;
     border: 1px solid #d7dce0 ;
     font-size: 13px;
-    font-weight: bold;
     line-height: 32px;
     text-align: center;
     -webkit-border-radius: 20px;
@@ -53,7 +52,6 @@ div.componentStyle {
     background-color: #00B9CC ;
     border: 1px solid #00B9CC ;
     font-size: 13px;
-    font-weight: bold;
     line-height: 32px;
     text-align: center;
     -webkit-border-radius: 20px;
@@ -63,12 +61,15 @@ div.componentStyle {
     cursor: pointer;
 }
 
+.textBold {
+    composes: baseFontBold from '../../static/css-components/fonts.css';
+}
+
 .widgetHeader{
     width: 187px;
     height: 29px;
-    font-family: Helvetica;
     font-size: 24px;
-    font-weight: bold;
+    composes: baseFontBold from '../../static/css-components/fonts.css';
     line-height: 29px;
     color: #6389AD;
     padding-top: 10px;
