Add border and padding on Dashboard page

--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -1,5 +1,9 @@
 @value acuoAction from '../../static/css-components/colors.css';
 
+.tableComponent {
+  padding: 20px;
+}
+
 .tableWrapper{
   -webkit-border-radius: 10px;
   border-radius: 10px;
