Change for OW-264

--- a/src/components/assets-deployed/sub-components/FlightItemTable.css
+++ b/src/components/assets-deployed/sub-components/FlightItemTable.css
@@ -2,7 +2,7 @@
     display: table;
     width: 100%;
     margin-top: 5px;
-    /*border-collapse: collapse;*/
+    table-layout: fixed;
 }
 
 .flightItemTableHeader {
@@ -10,8 +10,49 @@
     background-color: #2B3C4C;
     color: #FFFFFF;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 25px;
     composes: baseFontBold from '../../../static/css-components/fonts.css';
+    width: 100%;
+}
+
+/* Time */
+.flightItemTableHeader div:nth-child(1){
+    width: 6%;
+}
+
+/* Agreement */
+.flightItemTableHeader div:nth-child(2){
+    width: 26%;
+}
+
+/* From */
+.flightItemTableHeader div:nth-child(3){
+    width: 10%;
+}
+
+/* To */
+.flightItemTableHeader div:nth-child(4){
+    width: 15%;
+}
+
+/* Value */
+.flightItemTableHeader div:nth-child(5){
+    width: 20%;
+}
+
+/* CCY */
+.flightItemTableHeader div:nth-child(6){
+    width: 6%
+}
+
+/* Status */
+.flightItemTableHeader div:nth-child(7){
+    width: 13%;
+}
+
+/* PlusMinus */
+.flightItemTableHeader div:nth-child(8){
+    width: 4%;
 }
 
 .flightItemTableRowGroup{
@@ -33,11 +74,11 @@
 }
 
 .flightItemTableRow:nth-child(odd) {
-    background-color: #EBF5FF;
+    background-color: #FAFAFA;
 }
 
 .flightItemTableRow:nth-child(even) {
-    background-color: #FAFAFA;
+    background-color: #EBF5FF;
 }
 
 .flightItemTableCell {
