--- a/src/components/margin-call/MarginCall.css
+++ b/src/components/margin-call/MarginCall.css
@@ -1,9 +1,7 @@
 @value newAcuoBlue from '../../static/css-components/colors.css';
 
 .container{
-  margin-top: 2%;
-  margin-left: 1%;
-  margin-right: 1%;
+  margin: 2% 1%;
   background-color: #FFFFFF;
   box-shadow: 2px 3px 5px 0 rgba(0,0,0,0.5);
   border-radius: 8px;
