--- a/src/components/table/Table.css
+++ b/src/components/table/Table.css
@@ -134,8 +134,9 @@
 }
 .tableBody{
   display:flex;
-  background-color: #D1D6DC;
+  background-color: #7F8A93;
   padding:10px 25px;
+  color: #FFFFFF;
 }
 .tableBody .centerThis{
   display: table-cell;
