Change for OW-326

--- a/src/components/margin-agreement/MarginAgreementList.css
+++ b/src/components/margin-agreement/MarginAgreementList.css
@@ -78,6 +78,14 @@
     cursor: pointer;
 }
 
+.actBtnDisable{
+    background-color: #FAFAFA;
+    color: #D5DADF;
+    pointer-events: none;
+}
+
+
+
 .actBtnOrange{
     background-color: acuoActionOrange;
 }
