--- a/src/components/filter-bar/FilterBar.css
+++ b/src/components/filter-bar/FilterBar.css
@@ -149,25 +149,25 @@
     border-width: 8px 8px 0 8px;
     border-color: #494949 transparent transparent transparent;
     position: absolute;
-    top: 30%;
-    left: 8%
+    top: 7px;
+    left: 3px;
 }
 .filterDropdownArrow::after{
     content: '';
     width: 0;
     height: 0;
     border-style: solid;
-    border-width: 5px 5px 0 5px;
+    border-width: 8px 8px 0 8px;
     border-color: #fff transparent transparent transparent;
     position: absolute;
-    top: 30%;
-    left: 23%;
+    top: 4px;
+    left: 3px;
 }
 
 .filtersList {
     position: absolute;
     left: 0;
-    top: 100%;
+    top: 98%;
     width: 100%;
     background-color: #fff;
     -webkit-box-shadow: 5px 5px 14px -2px rgba(166,166,166,1);
