updated the styling init-collateral styling

--- a/src/components/pledge/Pledge.css
+++ b/src/components/pledge/Pledge.css
@@ -800,7 +800,7 @@ div.collateralTableExpanded div:nth-child(12){
 .statusAR{
   background: #58C4F5;
   color: #FFFFFF;
-  width: 20px;
+  /*width: 20px;*/
   height: 14px;
   display: block;
   border-radius: 2px;
@@ -812,7 +812,7 @@ div.collateralTableExpanded div:nth-child(12){
 .statusAV{
   background: #005544;
   color: #FFFFFF;
-  width: 20px;
+  /*width: 20px;*/
   height: 14px;
   display: block;
   border-radius: 2px;
@@ -824,7 +824,7 @@ div.collateralTableExpanded div:nth-child(12){
 .statusDP{
   background: #00B38F;
   color: #FFFFFF;
-  width: 20px;
+  /*width: 20px;*/
   height: 14px;
   display: block;
   border-radius: 2px;
@@ -836,7 +836,7 @@ div.collateralTableExpanded div:nth-child(12){
 .statusD{
   background: #4E83B5;
   color: #FFFFFF;
-  width: 20px;
+  /*width: 20px;*/
   height: 14px;
   display: block;
   border-radius: 2px;
