--- a/src/components/graph/Graph.css
+++ b/src/components/graph/Graph.css
@@ -6,3 +6,30 @@
 .toolTip text{
   text-anchor: right;
 }
+
+.graphCont {
+  position: relative;
+}
+
+.moneyIcon {
+  padding: 10px;
+  background-color: #D5DADF;
+  color: #353535;
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.5);
+  border-radius: 8px;
+  position: absolute;
+  z-index: 50;
+  composes: baseFontBold from './../../static/css-components/fonts.css';
+  width: 35px;
+  text-align: center;
+}
+
+.moneyOutIcon {
+  top: 15px;
+  left: 15px;
+}
+
+.moneyInIcon {
+  bottom: 15px;
+  left: 15px;
+}
