OW-90 Bold columns under margin call upload table

--- a/src/components/margin-call/MarginCall.css
+++ b/src/components/margin-call/MarginCall.css
@@ -79,6 +79,10 @@
   flex: 0 0 5%;
 }
 
+.boldCellText {
+  composes: baseFontBold from './../../static/css-components/fonts.css';
+}
+
 /*content*/
 .flexContainer{
   color: #2C3B4A;
